--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ authors = ["Elyes Mahjoubi"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.70.0"
-uvicorn = "^0.15.0"
+fastapi = "^0.90.1"
+uvicorn = "^0.24.0.post1"
 alembic = "^1.12.1"
 SQLAlchemy = "^2.0.0"
-pydantic = "^1.8.2"
+pydantic = "^1.8.1"
 python-dotenv = "^0.19.2"
 fastapi_class= "^3.3.0"
 asyncpg = "^0.29.0"
@@ -19,12 +19,12 @@ asyncpg = "^0.29.0"
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
 black = "^21.12b0"
-mypy = "^0.910"
-flake8 = "^4.0.1"
+mypy = "^1.7.1"
+flake8 = "^6.1.0"
 isort = "^5.10.1"
 pytest_asyncio= "^0.21.1"
 httpx = "^0.25.1"
-pytest-cov = "^4.0.0"
+pytest-cov = "^4.1.0"
 
 
 [tool.pytest.ini_options]
