--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - name: Set up Python & Poetry
-        uses: EM51641/DDD_api_template/.github/actions/build_app@dev
+        uses: EM51641/DDD_api_template/.github/actions/build_app@main
 
       - name: Execute flake8
         run:  poetry run flake8 app
