--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Python & Poetry
-        uses: EM51641/DDD_api_template/.github/actions/build_app@dev
+        uses: EM51641/DDD_api_template/.github/actions/build_app@main
 
       - name: Execute Pytest
         run: poetry run python -m pytest --cov=template_api tests/unit
