--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,11 @@ jobs:
         uses: EM51641/DDD_api_template/.github/actions/build_app@main
 
       - name: Execute Pytest
-        run: poetry run python -m pytest --cov=app tests/integration
+        run: poetry run python -m pytest --cov=app tests
         env:
           CI: true
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
